--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pixel-ui": "^0.0.57",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
