--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.1",
+    "use-sound": "^5.0.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
